[gd_scene load_steps=8 format=2]

[ext_resource path="res://Rocket/Rocket.tscn" type="PackedScene" id=1]
[ext_resource path="res://Earth.tscn" type="PackedScene" id=2]
[ext_resource path="res://Earth.gd" type="Script" id=3]
[ext_resource path="res://Map.gd" type="Script" id=4]
[ext_resource path="res://Camera.gd" type="Script" id=5]
[ext_resource path="res://Node.gd" type="Script" id=6]

[sub_resource type="Environment" id=1]
background_mode = 1
ambient_light_color = Color( 0.305882, 0.278431, 0.278431, 1 )

[node name="Spatial" type="Spatial"]
transform = Transform( 1.49886, 0, 0, 0, 1.49886, 0, 0, 0, 1.49886, 0, 0, 0 )
script = ExtResource( 4 )

[node name="Rocket" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.00413915, 0, 0.00910315, 0.00103935, 0.00993461, -0.000472584, -0.00904363, 0.00114174, 0.00411208, 66.3928, 41.3795, 65.1452 )

[node name="Camera" type="Camera" parent="Rocket"]
transform = Transform( 60.9277, 26.8589, 4.20009, -26.0097, 60.5914, -10.1694, -7.90839, 7.64952, 65.8041, -31.4597, 206.25, 2864.21 )
current = true
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Rocket/Camera"]
margin_left = -1.0
margin_right = 202.0
margin_bottom = 31.0
text = "Press space to stop , or resume, ESC to add a custom point "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coordinate" type="Label" parent="Rocket/Camera"]
margin_left = 822.0
margin_top = 5.0
margin_right = 1015.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Rocket/Camera"]
margin_left = 602.0
margin_top = 3.0
margin_right = 795.0
margin_bottom = 25.0
text = "Next coordinate: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 123.792, 0, 0 )

[node name="Spatial2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -123.536, 0, 0 )

[node name="Spatial3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 106.542, 0 )

[node name="Spatial4" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 73.7409, -14.5275, 79.8623 )

[node name="Spatial5" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -114.689 )

[node name="Spatial6" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.2897, 0, 111.489 )

[node name="Earth" parent="." instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Node" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 6 )
